# AQUASENTRY-

./: .scale  README.md  TODO.md  app.py  ngrok_tunnel.py  pyproject.toml  read.md  requirements.txt
.streamlit/: config.toml
alerts/: alert_20251011_212953.json  alert_20251011_213022.json  alert_20251011_213525.json  alert_20251012_093700.json  alert_20251012_103345.json  alert_20251012_103613.json  alert_20251012_104257.json  alert_20251015_122544.json  alert_20251015_123501.json  alert_20251015_124642.json
components/: disease_prediction.py  health_reporting.py  ibm_integration.py  iot_forecasting.py  satellite_monitor.py
data/: sample_water_quality.csv
utils/: alert_system.py  data_processing.py  email_alerts.py  export_data.py  historical_trends.py  map_visualization.py  ml_models.py
