[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.5.0",
    "sendgrid>=6.10.0",
    "streamlit>=1.40.0,<1.41.0",
]
